syntax = "proto3";
package novel_service;
option go_package = "superserver/domain/novel_service";

import "public/common.proto";


message Chapter {
    int32 id = 1;
    int32 book_id = 2;
    int32 code = 3;
    string src = 4;
    string title = 5;
    string content = 6;
    public.TaskStatus state = 7;
    int64 delete_time = 1001; // 删除时间 时间戳：秒
    int64 create_time = 1002; // 创建时间 时间戳：秒
    int64 update_time = 1003; // 最后更新时间 时间戳：秒
}

message ChapterFilter {
    repeated int32 ids = 1;
    repeated int32 book_ids = 2;
    repeated string srcs = 3;
    repeated public.TaskStatus states = 4;

    public.BetweenInt64 delete_time_range = 101;
    public.BetweenInt64 create_time_range = 102;
    public.BetweenInt64 update_time_range = 103;

    public.BooleanScope deleted = 500;

    Keywords keywords = 201;
    message Keywords {
        string keyword = 1;
    }
}

message ListChapterParams {
    public.Header header = 1;
    public.Pager pager = 2;
    repeated public.Sort sorts = 3;
    ChapterFilter filter = 4;
}

message ListChapterReply {
    public.ReplyHeader header = 1;
    public.Pager pager = 2;
    repeated Chapter data = 3;
}
